# halal-invest

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily-screener.yml
src/halal_invest/: __init__.py  cli.py
src/halal_invest/commands/: filter.py  portfolio.py  research.py  screen.py  signals.py  watchlist.py
src/halal_invest/core/: data.py  fundamentals.py  scoring.py  screener.py  sp500.py  spus.py  technicals.py
src/halal_invest/db/: database.py  portfolio.py  watchlist.py
src/halal_invest/display/: tables.py
src/halal_invest/pipeline/: daily_screener.py
src/halal_invest/report/: emailer.py  pdf_generator.py
tests/: test_fundamentals.py  test_portfolio.py  test_screener.py
