[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "halal-invest"
version = "1.0.0"
description = "Halal stock & ETF investment tool with automated S&P 500 screening"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0",
    "yfinance>=0.2.30",
    "pandas>=2.0",
    "ta>=0.11.0",
    "fpdf2>=2.7.0",
    "lxml>=4.9.0",
]

[project.scripts]
halal-invest = "halal_invest.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
